feat: add documentation for Delete Opening.
